# compton-diy

./: .gitignore  .gitmodules  .npmrc  CLAUDE.md  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: workflow.config.md
.claude/skills/flash-sale/: SKILL.md
.claude/skills/push-beta/: SKILL.md
.github/workflows/: agy-pr-review.yml  gemini-pr-review.yml  pr-build.yml  release.yml
apps/bambu-status-bar/: platformio.ini  project.json  version.py
apps/bambu-status-bar/src/: MQTTBroker.cpp  main.cpp
apps/cyd-clock/: .env.example  HANDOFF.md  README.md  STATUS.md  STORE_IDEAS.md  package.json  platformio.ini  project.json
apps/cyd-clock/data/: index.html
apps/cyd-clock/include/: Config.h
apps/cyd-clock/src/: ConfigManager.cpp  ConfigManager.h  StopwatchWidget.cpp  StopwatchWidget.h  TimerWidget.cpp  TimerWidget.h  WeatherClient.cpp  main.cpp
apps/espframe/: .gitignore  HANDOFF.md  NOTICE  README.md  devices.json  package-lock.json  package.json  project.json  renovate.json
apps/espframe/components/libwebp-esp32/: CMakeLists.txt
apps/espframe/components/libwebp-esp32/src/dec/: vp8_dec.c
apps/espframe/components/libwebp-esp32/src/utils/: utils.c
apps/espframe/docs/: 404.md  (+23 more)
libs/ota-update-client/: library.json  project.json
libs/touch-driver/: library.json  project.json
libs/weather-client/: library.json  project.json
scripts/: build-boards.sh  espframe-build-devices.sh  espframe-esphome.sh  espframe-sync-upstream.sh  pio.sh  setup.sh
tools/esp-flasher/: flasher-template.html  generate_index.py  generate_release.py
(+215 files in other folders)
